fixed: the spacing between the stars

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -72,7 +72,10 @@
         left: 18px
         background-image: url(../img/arrow-prev.svg)
 .stars
+  display: flex
   flex-basis: 100%
+.star
+  margin-right: 2px
 .offer
   font-size: 10px
   line-height: 13px
